--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta property="og:title" content="FAST-FLASH | All Wallets Transaction Generator">
     <meta property="og:description" content="COINBASE | BINANCE | CASHAPP | OKX | BLOCKCHAIN AND MANY MORE WALLET">
     <meta property="og:image" content="images/PcyAOq.BEST-TRANSACTION-GENERATOR.png"> <!-- Add the URL of your SEO image -->
-    <meta property="og:url" content="https://flashdeamond.com/">
+    <meta property="og:url" content="donlucky.vercel.app">
     
     <script async="" src="js/adsbygoogle.js" crossorigin="anonymous"></script>
      
@@ -103,7 +103,7 @@
     <p><span style="color: rgb(12, 51, 167)">COINBASE</span> | <span style="color: rgb(248, 198, 0)">BINANCE</span> 
         | <span style="color: #07b921;">CASHAPP</span> | OKX | <span style="color:rgb(87, 143, 255);">BLOCKCHAIN</span><br> AND MANY MORE WALLET</p>
 
-<a href="https://flashdeamond.com/home"><button>
+<a href="donlucky.vercel.app"><button>
             GET STARTED
     </button></a>
 
